# ralphx

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  dev.sh  lessons.md  pyproject.toml  test_oauth.py
.claude/: TEST_WORKFLOW_NOTES.md
.github/workflows/: ci.yml  publish.yml
design/: API_SPEC.md  DESIGN.md  LOOP_SCHEMA.md  SDLC_WORKFLOWS.md
docs/: BACKUP_AND_IMPORT.md  HANK_RCM_WORKFLOW_PLAN.md  RALPH_WORKFLOW_REQUIREMENTS.md  WORKFLOW_UX_IMPROVEMENTS.md
docs/design/: DESIGN_DOC_WIZARD.md  REMOTE_ACCESS.md  WORKFLOW_ARCHIVE_STEPS.md  WORKFLOW_FIRST_UX.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: config-editor.spec.ts  dashboard.spec.ts  resources.spec.ts  settings.spec.ts  work-items.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  api.ts  index.css
ralphx/: __init__.py  cli.py  mcp_server.py
ralphx/adapters/: base.py  claude_cli.py
ralphx/api/: main.py
ralphx/core/: auth.py  checkpoint.py  database.py  doctor.py  executor.py  import_manager.py  loop.py  loop_templates.py  oauth.py  permission_templates.py  planning_iteration_executor.py  planning_service.py  preview.py  project_db.py  project_export.py  project_import.py  resources.py  sample_project.py  session.py  templates.py  workflow_executor.py  (+2 more)
scripts/: PROMPT_IMPL.md  PROMPT_PLAN.md  extract_json.py  parse_stream.py  prd_manager.py  ralph_impl.sh  ralph_plan.sh
tests/: __init__.py  conftest.py  test_adapters.py  test_api.py  test_auth.py  test_checkpoint.py  test_cli.py  test_database.py  test_doctor.py  test_executor.py  test_guardrails.py  test_jsonl_import.py  test_loop_loader.py  test_mcp.py  test_models.py  test_permissions.py  test_preview.py  test_project_export_import.py  test_project_manager.py  test_ready_check.py  test_resources.py  test_session.py  test_step_resources.py  test_structured_status.py  test_workflow_export_import.py  test_workflow_resources.py  test_workspace.py
(+130 files in other folders)
