[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralphx"
version = "0.1.3"
description = "Autonomous AI loop orchestration for Claude Code - define workflows in YAML, run autonomously, monitor in real-time"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jack Neil", email = "jack@jackmd.com" }
]
keywords = [
    "ai",
    "agent",
    "automation",
    "llm",
    "claude",
    "orchestration",
    "workflow"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "sse-starlette>=1.0",
    "aiofiles>=23.0",
    "aiohttp>=3.9.0",
    "rich>=13.0",
    "watchfiles>=0.20",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.1",
]
mcp = [
    "mcp>=0.1",
]

[project.scripts]
ralphx = "ralphx.cli:main"

[project.urls]
Homepage = "https://github.com/jackneil/ralphx"
Repository = "https://github.com/jackneil/ralphx"
Documentation = "https://github.com/jackneil/ralphx#readme"

[tool.hatch.build.targets.wheel]
packages = ["ralphx"]

[tool.hatch.build.targets.sdist]
include = [
    "/ralphx",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
